# Oclgrind

./: .clang-format  .gitignore  .travis-deps.sh  .travis.yml  CMakeLists.txt  Dockerfile  INSTALL.linux  INSTALL.windows  LICENSE  Makefile.am  NEWS  README  README.md  cmake_config.h.in  config.h.in  configure.ac  install.sh  install_manifest.txt
tests/: Makefile.am  clc.h  example.sim  lb  lb.cl  lb.s  lb.sim  matmul.cl  matmul.s  matmul.sim  reduce.cl  reduce.s  reduce.sim  run_test.py  vecadd.cl  vecadd.s  vecadd.sim  vecadd_guarded.sim
tests/apps/: CMakeLists.txt
tests/apps/cos/: cos.c
tests/apps/image/: image.c
tests/apps/vecadd/: vecadd.c
tests/common/: common.c  common.h
tests/kernels/: CMakeLists.txt  TESTS  run_kernel_test.py  run_test
tests/kernels/alignment/: packed.cl  packed.ref  packed.sim  unaligned.cl  unaligned.ref  unaligned.sim
tests/kernels/arithmetic/: add.cl  add.ref  add.sim  div.cl  div.ref  div.sim  mul.cl  mul.sim  ptr.cl  ptr.ref  ptr.sim  rem.cl  rem.ref  rem.sim  sub.cl  sub.ref  sub.sim
tests/kernels/array/: array.ref  array.sim
tests/kernels/async_copy/: async_copy.cl  async_copy.ref  async_copy.sim  async_copy_divergent.cl  async_copy_global_race.ref  async_copy_global_race.sim  async_copy_local_race.ref  async_copy_local_race.sim  async_copy_loop.sim  async_copy_loop_divergent.cl  async_copy_single_wi.cl  async_copy_single_wi.ref  async_copy_single_wi.sim  async_copy_unwaited.cl  async_copy_unwaited.ref
tests/kernels/async_copy_divergent/: async_copy_divergent.ref  async_copy_divergent.sim
tests/kernels/async_copy_global_race/: async_copy_global_race.cl  async_copy_global_race.ref  async_copy_global_race.sim
tests/kernels/async_copy_local_race/: async_copy_local_race.cl  async_copy_local_race.ref  async_copy_local_race.sim
tests/kernels/async_copy_loop/: async_copy_loop.cl  async_copy_loop.ref  async_copy_loop.sim
tests/kernels/async_copy_loop_divergent/: async_copy_loop_divergent.sim
tests/kernels/async_copy_single_wi/: async_copy_single_wi.sim
tests/kernels/async_copy_unwaited/: async_copy_unwaited.sim
tests/kernels/atomic_cmpxchg_false_race/: atomic_cmpxchg_false_race.ref  atomic_cmpxchg_false_race.sim
tests/kernels/atomic_cmpxchg_race/: atomic_cmpxchg_race.ref  atomic_cmpxchg_race.sim
tests/kernels/atomic_global_fence/: atomic_global_fence.ref  atomic_global_fence.sim
tests/kernels/atomic_global_fence_race/: atomic_global_fence_race.cl  atomic_global_fence_race.ref  atomic_global_fence_race.sim
tests/kernels/atomic_increment/: atomic_increment.ref  atomic_increment.sim
tests/kernels/atomic_intergroup_race/: atomic_intergroup_race.cl  atomic_intergroup_race.ref  atomic_intergroup_race.sim
tests/kernels/atomic_local_fence/: atomic_local_fence.cl  atomic_local_fence.ref  atomic_local_fence.sim
tests/kernels/atomic_race_after/: atomic_race_after.ref  atomic_race_after.sim
tests/kernels/atomic_race_before/: atomic_race_before.cl  atomic_race_before.ref  atomic_race_before.sim
tests/kernels/atomic_same_workitem/: atomic_same_workitem.cl  atomic_same_workitem.ref  atomic_same_workitem.sim
tests/kernels/atomics/: atom_add.cl  atom_add.ref  atom_add.sim  atomic_cmpxchg_false_race.cl  atomic_cmpxchg_false_race.ref  atomic_cmpxchg_false_race.sim  atomic_cmpxchg_race.cl  atomic_cmpxchg_race.ref  atomic_cmpxchg_read_race.cl  atomic_cmpxchg_read_race.ref  atomic_cmpxchg_read_race.sim  atomic_cmpxchg_write_race.cl  atomic_cmpxchg_write_race.ref  atomic_cmpxchg_write_race.sim  atomic_global_fence.cl  atomic_global_fence.ref  atomic_global_fence_race.ref  atomic_increment.cl  atomic_increment.ref  atomic_increment.sim  atomic_intergroup_race.ref  atomic_intergroup_race.sim  atomic_local_fence.ref  atomic_minmax_signed.cl  atomic_minmax_signed.ref  atomic_minmax_signed.sim  atomic_race_after.cl  atomic_race_after.ref  atomic_race_after.sim  atomic_race_before.cl  atomic_race_before.ref  atomic_race_before.sim  atomic_same_workitem.cl  atomic_same_workitem.ref
tests/kernels/barrier/: barrier_different_instructions.cl  barrier_different_instructions.ref  barrier_divergence.cl  barrier_divergence.ref  barrier_divergence.sim
tests/kernels/barrier_different_instructions/: barrier_different_instructions.ref  barrier_different_instructions.sim
tests/kernels/barrier_divergence/: barrier_divergence.sim
tests/kernels/broadcast/: broadcast.ref  broadcast.sim
tests/kernels/bugs/: byval_function_argument.cl  byval_function_argument.ref  byval_function_argument.sim  const_gep_expr_pointee_type.cl  const_gep_expr_pointee_type.sim  false_warning_vector_argument.cl  false_warning_vector_argument.ref  false_warning_vector_argument.sim  gvn_arbitrary_integers.cl  gvn_arbitrary_integers.ref  gvn_arbitrary_integers.sim  kernel_struct_argument.cl  kernel_struct_argument.ref  kernel_struct_argument.sim  llvm_bswap.cl  llvm_bswap.ref  llvm_bswap.sim  llvm_memcpyopt_bug.cl  llvm_memcpyopt_bug.ref  llvm_memcpyopt_bug.sim  many_alloca.cl  many_alloca.ref  many_alloca.sim  multidim_array_in_struct.cl  multidim_array_in_struct.ref  multidim_array_in_struct.sim  null_argument.cl  null_argument.ref  null_argument.sim  restrict.cl  restrict.ref  restrict.sim  rhadd_overflow.cl  rhadd_overflow.ref  rhadd_overflow.sim  sroa_addrspace_cast.cl  sroa_addrspace_cast.ref  sroa_addrspace_cast.sim  ternary_vector_scalar.cl  ternary_vector_scalar.ref  (+4 more)
tests/kernels/data-race/: broadcast.cl  broadcast.ref  broadcast.sim  global_fence.cl  global_fence.ref  global_only_fence.ref  global_only_fence.sim  global_read_write_race.ref  global_read_write_race.sim  global_write_write_race.ref  global_write_write_race.sim  increment.ref  increment.sim  intergroup_hidden_race.cl  intergroup_hidden_race.ref  intergroup_hidden_race.sim  intergroup_race.ref  intergroup_race.sim  intragroup_hidden_race.cl  (+11 more)
tests/runtime/: CMakeLists.txt  build_program  build_program.c  build_program.ref  kernel_scope_local_mem_usage  kernel_scope_local_mem_usage.c  map_buffer.c  map_buffer.ref  multqueues  multqueues.c  multqueues.ref  sampler  sampler.c  sampler.ref
(+317 files in other folders)
